# MEX-DynGraph-Anomaly-Detection

./: .gitignore  Untitled  mlflow.db  pyproject.toml
archive/: decomp_results.py  numbers_demo.py  trafic_analysis.py
src/: GRTen_run.py  abiline_tests.py  ampf_plots.py  anomaly_injection.py  anomaly_injection_plots.py  cp_run.py  graph_dataset.py  graph_reg_run.py  graph_reg_run.pycopy  hyperparam_tune.py  incremental_svd.py  lap_reg_cp.py  lowrank_test.py  mlflow_run.py  model_config.yaml  model_tests.py  net_traffic_gen.py  parameter_effects_plot.py  parse_EU_email.py  plot_ave_prauc.py  plotting.py  pr_plots.py  ranks_plot.py  regularized_cp.py  resid_analysis.py  results_to_latex.py  rhooi_run.py  robust_cp_run.py  run_param_est.py  signal_decomp.py  synthetic_graph.py  time_plot.py  time_tests.py  time_vs_prauc.py  time_vs_tol.py  tolerance_plot.py  tucker_run.py
src/archive/: gradient_dec.py  graph_reg_run.py  lapacian.py  net_flow_parser.py  trafic_analysis.py
src/data_gen/: net_traffic_gen.py  synthetic_graph.py
src/dataset_parsers/: BEED_parser.py  parse_EU_email.py  parse_xml.py  read_mnist.py  skab.py
src/models/: BasicCP.py  BasicTucker.py  GRTenDecomp.py  GRTucker.py  RHOOI.py  RHOOI_model.py  RobustCp.py  __init__.py  cp_model.py  decomp_model.py  lap_reg_cp.py  replicate_res.py  robust_cp.py
src/sk_models/: GRTenDecomp.py  cp_model.py
src/tests/: EUEmail_one_minus_test.py  ODE_EU_test.py  abiline_tests.py  decomp_analysis.py
src/utils/: LSH.py  anomaly_injector.py  datasets.py  (+7 more)
test/: PoissonTraffic_test.py  synthetic_graph_test.py
(+9 files in other folders)
