[project]
name = "mex-dyngraph-anomaly-detection"
version = "0.1.0"
description = "Dynamic graph anomaly detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annoy>=1.17.3",
    "dynetx>=0.3.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "tensorly>=0.9.0",
]
